[package]
name = "pugbot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
serenity = { version = "0.12.0", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "cache",
  "collector",
  "http",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rusqlite = "0.30.0"
